[package]
name = "cybele-cli"
version = "0.1.0"
edition = "2021"
authors = ["Bastien Teinturier"]
license = "MIT"
repository = "https://github.com/cybele-labs/cybele-cli"
description = "Command-line interface for the cybele password manager."

[dependencies]
rpassword = "7.2.0"
rprompt = "2.0.2"
cybele-core = { git = "https://github.com/cybele-labs/cybele-core" }